package com.uml.elaborate;

// Drivable interface representing drivable vehicles
public interface Drivable {
    void start();
    void stop();
}
