package com.uml.elaborate;

// Engine class representing an engine component
public class Engine {
    private int horsepower;
    private String fuelType;

    public Engine(int horsepower, String fuelType) {
        this.horsepower = horsepower;
        this.fuelType = fuelType;
    }

    public void start() {
        // Implementation of start method
    }

    public void stop() {
        // Implementation of stop method
    }
}
