package com.uml.elaborate;

// Rudder class representing a rudder component
public class Rudder {
    // Rudder class definition
}
