package com.uml.elaborate;

// Vehicle class representing a generic vehicle
public class Vehicle {
    private String manufacturer;
    private String model;

    public Vehicle(String manufacturer, String model) {
        this.manufacturer = manufacturer;
        this.model = model;
    }

    public void accelerate(int speed) {
        // Implementation of accelerate method
    }

    public void brake() {
        // Implementation of brake method
    }
}
