package com.uml.elaborate;

// Wheel class representing a wheel component
public class Wheel {
    private int size;
    private String type;

    public Wheel(int size, String type) {
        this.size = size;
        this.type = type;
    }

    public void rotate() {
        // Implementation of rotate method
    }
}
